fixing header alignment

--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,14 @@ body{
 }
 header{
     background-color: #333333;
+    
 }
 h1{
     color: #eee;
     font-size: 28px;
-    margin: 15px;
-    padding: 15px;  
+    margin: 0px;
+    padding: 0px;  
+    text-align: center;
 }
 h2{
     font-size: 24px;
